fixed text wrapping in history box

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ h4 {
 	display: block;
 	overflow-y: auto;
 	height: 68vh;
+	padding: 0 20px;
+	word-wrap: break-word;
 }
 
 #input {
@@ -117,6 +119,7 @@ h4 {
 		margin-top: 0;
 		margin-bottom: 15px;
 		height: 97vh;
+		max-width: 100vw;
 	}
 
 	.fade {
